--- a/sprin1/style/_main.scss
+++ b/sprin1/style/_main.scss
@@ -75,7 +75,9 @@ main{
         height: 1203.5px;
         display: flex;
         flex-flow: row wrap;
-        
+        div{
+            width: 100%;
+        }
         article{
             width: 100%;
             transform: skewY(6deg);
@@ -110,8 +112,31 @@ main{
             margin: 0 0 11px 11px;
             transform: none;
             transform-origin: none;
+            img{
+                width:100%;
+            }
+           
+
         }
+        .embed-container {
+            position: relative;
+            padding-bottom: 73%;
+            height: 0;
+            
+        }
+        .embed-container iframe {
+            border: none;
+            border-radius: 5px;
+            position: absolute;
+            top:0;
+            left: 0;
+            width: 101%;
+            height: 100%;
+        
+        }
+
     }
+    
 
     .nosotros{
         grid-area: nosotros;
@@ -124,7 +149,7 @@ main{
             overflow: hidden;
 
             img{
-                width: 360px;
+                width: 99%;
                 height: 519px;
             }
         }
@@ -147,5 +172,6 @@ main{
             width: 50%;
         }
     }
+
 
 }
