--- a/sprin1/style/_header.scss
+++ b/sprin1/style/_header.scss
@@ -15,8 +15,8 @@ header{
     
     .menu_movil{
         width: 18px;
-        height: 10px;
-        margin: 16px 5.9% 0 0 ;
+        height: 12px;
+        margin: 16px 19px 0 0 ;
 
     }
     
