--- a/sprin1/style/_header.scss
+++ b/sprin1/style/_header.scss
@@ -5,23 +5,115 @@ header{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-   
 
     img{
         width: 24px;
         height: 24px;
         margin: 10px 0 0 5%;
     }
-    
+
+        /*
     .menu_movil{
+        position: relative;
+        top:0;
+        right:0;
+        z-index: 20;
         width: 18px;
-        height: 12px;
-        margin: 16px 19px 0 0 ;
+        height: 13px;
+        
+        border: none;
+       
 
     }
-    
-    .menu{
-        display: none;
+    */
+
+    /* amburgesa*/
+    nav .menu{
+        margin: 16px 19px 0 0 ;
     }
+    nav .menu ul {
+    /*posicion absolute para que se posicione debajo del resto del header - top medida del header*/
+        width: 100%;
+        position: absolute;
+        top: 45px;
+        right: 0;
+        overflow: hidden;
+        list-style: none;
+        background: #0000EC;
+        height: 0px;
+        transition: height 0.5s ease;
+    }
+    nav .menu  ul li {
+        position: relative;
+    }  
+    nav .menu ul li a {
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #fff;
+        padding: 16px 5%;
+        line-height: 28px;
+        display: block;
+    }
+    nav .menu  ul li a:hover {
+        text-decoration: line-through;
+        color: #00F3BB;
+    }
+    nav .menu ul li a:active{
+        text-decoration: line-through;
+        color: rgba(6,10,36,0.56);
+    }
+    /*animación del menu que se desplega*/
+    nav .menu input[type="checkbox"]:checked ~ ul {
+        height: 240px;
+        transition: height 0.5s ease-in-out;
+        -moz-transition: height 0.5s ease-in-out;
+        -o-transition: height 0.5s ease-in-out;
+        -webkit-transition: height 0.5s ease-in-out;
+    }
+    nav .menu {
+        padding-top: 3px;
+    }
+    /*checkbox transparente y en primer plano*/
+    nav .menu input {
+        display: block;
+        width: 40px;
+        height: 32px;
+        opacity: 0;
+        z-index: 2;
+        position: absolute;
+    }
+    /*span -lineas del menu hamburguesa-*/
+    nav .menu span {
+        display: block;
+        width: 25px;
+        height: 2.5px;
+        margin-bottom: 6.5px;
+        position: relative;
+        background: #000;
+        z-index: 1;
+        transform-origin: 3px 0px;
+        transition: transform 0.5s ease,
+            opacity 0.55s ease;
+    }
+    nav .menu span:first-child {
+        transform-origin: 0% 0%;
+    }
+    nav .menu span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+    /*movimiento a cruz*/
+    nav .menu input:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(2px, 1px);
+    }
+    nav .menu input:checked ~ span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    nav .menu input:checked ~ span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(1px, 0px);
+    }
+
 
 }
