--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -1,12 +1,15 @@
 
 header{
-     @media screen and (min-width:600px) {
+     @media screen and (min-width:500px) {
+
         flex-flow: row wrap;
         width: 100%;
         height: 80px;
+
         .menu_movil{
             display: none;
         }
+        
         .menu{
             
             display: flex;
@@ -17,12 +20,44 @@ header{
             text-transform: capitalize;
 
         }
-    }
-    img{
-        @media screen and (min-width:600px) {
+
+        img{
+        
             width: 36px;
             height: 36px;
             margin: 22px 0 0 100px;
         }
+
+        /* Amburgueza */
+        nav .menu ul {
+            position: relative;
+            top: 0;
+            right: 0;
+            overflow: hidden;
+            background: unset;
+            height: unset;
+        }
+        nav .menu  ul li {
+            padding: 5px 10px;
+            display: inline-block;
+        } 
+        nav .menu  ul li:hover {
+            background: unset;
+            border-bottom: 2px solid black;
+        } 
+        nav .menu ul li a {
+            padding: unset;
+            line-height: unset;
+        }
+        nav .menu  ul li a:hover {
+            color: unset;
+        } 
+        nav .menu input {
+            display: none;
+        }
+        nav .menu span {
+            display: none;
+        }
     }
 }
+    
