--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*Variables Generales*/
 /*variables Header*/
 * {
@@ -44,6 +45,25 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  /*
+    .menu_movil{
+        position: relative;
+        top:0;
+        right:0;
+        z-index: 20;
+        width: 18px;
+        height: 13px;
+        
+        border: none;
+       
+
+    }
+    */
+  /* amburgesa*/
+  /*animación del menu que se desplega*/
+  /*checkbox transparente y en primer plano*/
+  /*span -lineas del menu hamburguesa-*/
+  /*movimiento a cruz*/
 }
 
 header img {
@@ -52,14 +72,110 @@ header img {
   margin: 10px 0 0 5%;
 }
 
-header .menu_movil {
-  width: 18px;
-  height: 12px;
+header nav .menu {
   margin: 16px 19px 0 0;
 }
 
-header .menu {
-  display: none;
+header nav .menu ul {
+  /*posicion absolute para que se posicione debajo del resto del header - top medida del header*/
+  width: 100%;
+  position: absolute;
+  top: 45px;
+  right: 0;
+  overflow: hidden;
+  list-style: none;
+  background: #0000EC;
+  height: 0px;
+  -webkit-transition: height 0.5s ease;
+  transition: height 0.5s ease;
+}
+
+header nav .menu ul li {
+  position: relative;
+}
+
+header nav .menu ul li a {
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 16px 5%;
+  line-height: 28px;
+  display: block;
+}
+
+header nav .menu ul li a:hover {
+  text-decoration: line-through;
+  color: #00F3BB;
+}
+
+header nav .menu ul li a:active {
+  text-decoration: line-through;
+  color: rgba(6, 10, 36, 0.56);
+}
+
+header nav .menu input[type="checkbox"]:checked ~ ul {
+  height: 240px;
+  transition: height 0.5s ease-in-out;
+  -moz-transition: height 0.5s ease-in-out;
+  -o-transition: height 0.5s ease-in-out;
+  -webkit-transition: height 0.5s ease-in-out;
+}
+
+header nav .menu {
+  padding-top: 3px;
+}
+
+header nav .menu input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  opacity: 0;
+  z-index: 2;
+  position: absolute;
+}
+
+header nav .menu span {
+  display: block;
+  width: 25px;
+  height: 2.5px;
+  margin-bottom: 6.5px;
+  position: relative;
+  background: #000;
+  z-index: 1;
+  -webkit-transform-origin: 3px 0px;
+          transform-origin: 3px 0px;
+  -webkit-transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
+  transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.55s ease;
+  transition: transform 0.5s ease, opacity 0.55s ease, -webkit-transform 0.5s ease;
+}
+
+header nav .menu span:first-child {
+  -webkit-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
+}
+
+header nav .menu span:nth-last-child(2) {
+  -webkit-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
+}
+
+header nav .menu input:checked ~ span {
+  opacity: 1;
+  -webkit-transform: rotate(45deg) translate(2px, 1px);
+          transform: rotate(45deg) translate(2px, 1px);
+}
+
+header nav .menu input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+          transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+header nav .menu input:checked ~ span:nth-last-child(2) {
+  -webkit-transform: rotate(-45deg) translate(1px, 0px);
+          transform: rotate(-45deg) translate(1px, 0px);
 }
 
 main {
@@ -296,7 +412,7 @@ footer {
   grid-area: _footer;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
   header {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -304,6 +420,7 @@ footer {
             flex-flow: row wrap;
     width: 100%;
     height: 80px;
+    /* Amburgueza */
   }
   header .menu_movil {
     display: none;
@@ -320,13 +437,39 @@ footer {
     list-style: none;
     text-transform: capitalize;
   }
-}
-
-@media screen and (min-width: 600px) {
   header img {
     width: 36px;
     height: 36px;
     margin: 22px 0 0 100px;
+  }
+  header nav .menu ul {
+    position: relative;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    background: unset;
+    height: unset;
+  }
+  header nav .menu ul li {
+    padding: 5px 10px;
+    display: inline-block;
+  }
+  header nav .menu ul li:hover {
+    background: unset;
+    border-bottom: 2px solid black;
+  }
+  header nav .menu ul li a {
+    padding: unset;
+    line-height: unset;
+  }
+  header nav .menu ul li a:hover {
+    color: unset;
+  }
+  header nav .menu input {
+    display: none;
+  }
+  header nav .menu span {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
