--- a/sprin1/style/_main.scss
+++ b/sprin1/style/_main.scss
@@ -75,6 +75,7 @@ main{
     }
 
     .episodios{
+        z-index: 10;
         grid-area: episodios;
         width: 100%;
         height: 1203.5px;
@@ -139,24 +140,35 @@ main{
     
 
     .nosotros{
+        z-index: 20;
+        width: 100%;
         grid-area: nosotros;
         display: flex;
-        flex-flow: row nowrap; 
-        position: relative;
-        top:0;
-        .phone_over{
+        flex-flow: row nowrap;
+        article{
             width: 100%;
-            overflow: hidden;
-
-            img{
-                width: 99%;
-                height: 519px;
+            position: relative;
+            top: -95.5px;
+            
+            div.phone_over{
+                width: 320px;
+                overflow: hidden;
+                align-items: center;
+                img{
+                    position: relative;
+                    top:0;
+                    left: -20px;
+                    width: 360px;
+                    height: 519px;
+                    
+                }
             }
-        }
-        
-        p{  
-            align-items: center;
-            width: 90%;
+            
+            p{  
+                padding-left: 16px;
+                align-items: center;
+                width: 90%;
+            }
         }
     } 
     
