--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -45,20 +45,6 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  /*
-    .menu_movil{
-        position: relative;
-        top:0;
-        right:0;
-        z-index: 20;
-        width: 18px;
-        height: 13px;
-        
-        border: none;
-       
-
-    }
-    */
   /* amburgesa*/
   /*animación del menu que se desplega*/
   /*checkbox transparente y en primer plano*/
@@ -272,6 +258,7 @@ main .oblicuo {
 }
 
 main .episodios {
+  z-index: 10;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: episodios;
@@ -355,6 +342,8 @@ main .episodios .embed-container iframe {
 }
 
 main .nosotros {
+  z-index: 20;
+  width: 100%;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: nosotros;
@@ -365,21 +354,32 @@ main .nosotros {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
+}
+
+main .nosotros article {
+  width: 100%;
+  position: relative;
+  top: -95.5px;
+}
+
+main .nosotros article div.phone_over {
+  width: 320px;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .nosotros article div.phone_over img {
   position: relative;
   top: 0;
-}
-
-main .nosotros .phone_over {
-  width: 100%;
-  overflow: hidden;
-}
-
-main .nosotros .phone_over img {
-  width: 99%;
+  left: -20px;
+  width: 360px;
   height: 519px;
 }
 
-main .nosotros p {
+main .nosotros article p {
+  padding-left: 16px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
