--- a/sprin1/style/_footer.scss
+++ b/sprin1/style/_footer.scss
@@ -1,3 +1,20 @@
 footer{
+    height: calc(100% - 95px);
     grid-area: _footer;
+    margin-bottom: 31px;
+    
+    p{
+        width: 227px;
+        height: 22px;
+        margin: 24px 46px 16px 47px;
+    }
+    ul {
+        list-style: none;
+        width: 100%;
+        height: 28px;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content:space-around;
+    }
+
 }
