--- a/sprin1/style/_main.scss
+++ b/sprin1/style/_main.scss
@@ -10,7 +10,40 @@ main{
     grid-template-rows: auto;
     
     font-family: IBMPlexSans,sans-serif;
-    
+    .btn{
+        
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        text-transform: uppercase;
+        width: 90%;
+        height: 48px;
+        margin: 36px 5% 24px 5%;
+        font-family: 'IBM Plex Mono', monospace,sans-serif;
+        font-weight: 500;
+        background-color: $button_back_ground_color;
+        font-size: 16px;
+        color: #060A24;
+        letter-spacing: 0;
+        line-height: 22px;
+        &:hover{
+            transition-duration:1s;
+            background-image: linear-gradient(225deg, #0000FE 0, #00F0B8 100%);
+            color: #FFFFFF;
+        }    
+    }
+
+    h2{
+        width: 90%;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 400;
+    }
+    p{
+        width: 90%;
+        font-family: 'IBM Plex Mono', monospace,sans-serif;
+        font-weight: 400;
+    }
     .title {   
         grid-area: title;
         font-family: 'IBM Plex Mono', monospace,sans-serif;
@@ -38,28 +71,7 @@ main{
             letter-spacing: 0;
             line-height: 22px;
         }
-        div{
-            display: flex;
-            flex-flow: column wrap;
-            align-items: center;
-            justify-content: center;
-            text-transform: uppercase;
-            width: 90%;
-            height: 48px;
-            margin: 36px 5% 24px 5%;
-            font-weight: 500;
-            background-color: $button_back_ground_color;
-            font-size: 16px;
-            color: #060A24;
-            letter-spacing: 0;
-            line-height: 22px;
-            &:hover{
-                transition-duration:1s;
-                background-image: linear-gradient(225deg, #0000FE 0, #00F0B8 100%);
-                color: #FFFFFF;
-            }
-            
-        }
+        
     }
     
     .oblicuo {
@@ -68,14 +80,13 @@ main{
         left: 0;
         background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
         width: 100%;
-        height:300px;
         transform: skewY(-6deg);
         transform-origin: top right;
         
     }
 
     .episodios{
-        z-index: 10;
+        
         grid-area: episodios;
         width: 100%;
         height: 1203.5px;
@@ -140,16 +151,18 @@ main{
     
 
     .nosotros{
-        z-index: 20;
+        margin-top: 37px;
         width: 100%;
         grid-area: nosotros;
         display: flex;
         flex-flow: row nowrap;
+        position: relative;
+        top: -95.5px;
         article{
-            width: 100%;
             position: relative;
-            top: -95.5px;
-            
+            top:0;
+            left: 0;
+            width: 100%;
             div.phone_over{
                 width: 320px;
                 overflow: hidden;
@@ -162,26 +175,127 @@ main{
                     height: 519px;
                     
                 }
+                padding-bottom: 27px;
             }
             
-            p{  
-                padding-left: 16px;
+            h2{  
+                margin: 0 16px 8px 16px;
                 align-items: center;
-                width: 90%;
+                text-transform:initial;
+                font-size: 36px;
+                color: #060A24;
+                letter-spacing: 0;
+                line-height: 42px;
+                
+            }
+            p{
+                margin: 0 16px 54px 16px;
+                height: 254px;
+                font-size: 14px;
+                color: #060A24;
+                letter-spacing: 0;
+                line-height: 22px;
             }
         }
     } 
     
     .entrevistas{
         grid-area: entrevistas;
-        img{
-            width: 50%;
+        width: 100%;
+        position: relative;
+        top: -95.5px;
+        h2{
+            margin: 0 16px 14px 16px ;
+            font-size: 36px;
+            color: #060A24;
+            letter-spacing: 0;
+            line-height: 42px;
+
         }
+        div{
+            width: 100%;
+            height:243px;
+            img{
+                width: 320px;
+                height: 243px;
+            
+            }
+        }
+        
+        
     }
     .topicos{
+
         grid-area: topicos;
-        img{
-            width: 50%;
+        display: flex;
+        flex-flow: row wrap;
+        position: relative;
+        top: -95.5px;
+        article{
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            
+            h2{
+                text-align: start;
+                margin: 48px 16px 37px 16px;
+                font-size: 36px;
+                color: #060A24;
+                letter-spacing: 0;
+                line-height: 42px;
+                
+            }
+            p{
+                font-family: 'IBM Plex Sans', sans-serif;
+                font-weight: 600;
+                font-size: 24px;
+                color: #060A24;
+                letter-spacing: 0;
+                text-align: center;
+                margin: 13px 16px 36px 16px;
+                
+                
+            }
+            p.p65{
+                margin-bottom: 65px;
+            }
+            p.p42{
+                margin-bottom: 42px;
+            }
+            
+            img{
+                display: flex;
+                flex-flow: row wrap;
+                align-items: center;
+                width: 104px;
+
+            }
+        }
+        .novedades{
+            overflow: hidden;
+            width: 100%;
+            height: 341px;
+            
+            div{
+                transform-origin: top right;
+                h2{
+                    margin: 64px 16px 36px 16px ;
+                    transform: skewY(6deg);
+                    font-size: 36px;
+                    color: #FFFFFF;
+                    letter-spacing: 0;
+                    text-align: center;
+                    line-height: 42px;
+                
+                }
+                .btn{
+                    
+                    transform: skewY(6deg);
+                    margin-bottom: 67px;
+                    
+                }
+            }
+
         }
     }
 
