--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -264,7 +264,7 @@
                 letter-spacing: 0;
                 line-height: 28px;
 
-                width: 269px;
+                width: 100%;
                 height: 28px;
                 margin:0 0 31px 100px;
             }
