--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -880,7 +880,7 @@ footer ul {
     color: #060A24;
     letter-spacing: 0;
     line-height: 28px;
-    width: 269px;
+    width: 100%;
     height: 28px;
     margin: 0 0 31px 100px;
   }
