--- a/sprin1/style/_header.scss
+++ b/sprin1/style/_header.scss
@@ -1,5 +1,9 @@
 header{
+    z-index: 30;
     grid-area: _header;
+    position: sticky;
+    top:0;
+    background-color: #fff;
     width: 100%;
     height: 44px;
     display: flex;
@@ -30,7 +34,8 @@ header{
     }
     nav .menu  ul li {
         position: relative;
-    }  
+    } 
+    
     nav .menu ul li a {
         position: relative;
         text-decoration: none;
@@ -48,13 +53,11 @@ header{
         text-decoration: line-through;
         color: rgba(6,10,36,0.56);
     }
+    
     /*animación del menu que se desplega*/
     nav .menu input[type="checkbox"]:checked ~ ul {
-        height: 240px;
+    height: 240px;
         transition: height 0.5s ease-in-out;
-        -moz-transition: height 0.5s ease-in-out;
-        -o-transition: height 0.5s ease-in-out;
-        -webkit-transition: height 0.5s ease-in-out;
     }
     nav .menu {
         padding-top: 3px;
@@ -78,26 +81,153 @@ header{
         background: #000;
         z-index: 1;
         transform-origin: 3px 0px;
-        transition: transform 0.5s ease,
-            opacity 0.55s ease;
+        transition:opacity 1.5s ease;
     }
-    nav .menu span:first-child {
+    nav div.menu span {
         transform-origin: 0% 0%;
+        animation: check_menu_out_first_child 0.75s ease-in-out;
     }
-    nav .menu span:nth-last-child(2) {
+    nav div.menu span:nth-last-child(2) {
         transform-origin: 0% 100%;
+        animation: check_menu_out_last_child_2 0.4s ease-in-out;
     }
+    nav div.menu span:nth-last-child(3) {
+        transform-origin: 0% 50%;
+        animation: check_menu_out_last_child_3 0.75s ease-in-out;
+    }
+
+
     /*movimiento a cruz*/
     nav .menu input:checked ~ span {
+        animation: check_menu_in 0.5s ease-in-out;
         opacity: 1;
         transform: rotate(45deg) translate(2px, 1px);
     }
     nav .menu input:checked ~ span:nth-last-child(3) {
+        animation: check_menu_in 0.5s ease-in-out;
         opacity: 0;
         transform: rotate(0deg) scale(0.2, 0.2);
     }
     nav .menu input:checked ~ span:nth-last-child(2) {
+
+        animation: check_menu_in 0.5s ease-in-out;
         transform: rotate(-45deg) translate(1px, 0px);
+
+    }
+    @keyframes check_menu_out_first_child{
+
+        0%{
+        opacity: 1;
+        transform: rotate(45deg) scale(1, 1);
+
+        }
+        40%{
+        opacity: 0.8;
+        transform: rotate(30deg) scale(0.8, 0.8);
+
+        }
+        60%{
+        opacity: 0.5;
+        transform: rotate(20deg) scale(0.5, 0.5);
+
+        }
+        80%{
+        opacity: 0.5;
+        transform: rotate(10deg) scale(0.5, 0.5);
+
+        }
+
+        100%{
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+
+
+        }
+    }
+    @keyframes check_menu_out_last_child_2{
+
+        0%{
+        opacity: 1;
+        transform: rotate(-45deg) scale(1, 1);
+
+        }
+        40%{
+        opacity: 0.8;
+        transform: rotate(-30deg) scale(0.8, 0.8);
+
+        }
+        60%{
+        opacity: 0.5;
+        transform: rotate(-20deg) scale(0.5, 0.5);
+
+        }
+        80%{
+        opacity: 0.5;
+        transform: rotate(-10deg) scale(0.5, 0.5);
+
+        }
+
+        100%{
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+
+
+        }
+    }
+    @keyframes check_menu_out_last_child_3{
+
+        0%{
+        opacity: 0;
+        transform: rotate(0) scale(0.2, 0.2);
+
+        }
+        40%{
+        opacity: 0.4;
+        transform: rotate(0)  scale(0.4, 0.4);
+
+        }
+        60%{
+        opacity: 0.6;
+        transform: rotate(0) scale(0.6, 0.6);
+
+        }
+        80%{
+        opacity: 0.8;
+        transform: rotate(0) scale(0.8, 0.8);
+
+        }
+
+        100%{
+        opacity: 1;
+        transform: rotate(0) scale(1, 1);
+
+
+        }
+    }
+
+
+    @keyframes check_menu_in{
+        0%{
+        opacity: 1;
+        transform: rotate(0deg) scale(1, 1);
+
+        }
+        50%{
+        opacity: 0.8;
+        transform: rotate(0deg) scale(0.8, 0.8);
+
+        }
+        80%{
+        opacity: 0.5;
+        transform: rotate(0deg) scale(0.5, 0.5);
+
+        }
+        100%{
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+
+
+        }
     }
 
 
