--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -2,6 +2,10 @@
     @media screen  and (min-width: 1000px ) {
         
         header{
+            z-index: 30;
+            position: sticky;
+            top:0;
+            background-color: #fff;
             height: 80px;
             
             img{
@@ -10,17 +14,35 @@
                 margin: 22px 0 22px 100px;
             }
             /*Se elemininan aspectos visualles del menu amburgesa*/
+            nav .menu ul {
+                position: relative;
+                top: 0;
+                right: 0;
+                overflow: hidden;
+                background: unset;
+                height: unset;
+            }
+            nav .menu  ul li {
+                padding: 5px 10px;
+                display: inline-block;
+            } 
             nav .menu  ul li:hover {
-            background: unset;
-            border-bottom: 2px solid black;
+                background: unset;
+                
             } 
             nav .menu ul li a {
                 padding: unset;
                 line-height: unset;
+                color: #060A24;
             }
             nav .menu  ul li a:hover {
-                color: unset;
-            } 
+                color: #00F3BB;
+            }
+            nav .menu ul li a:active{
+                text-decoration: line-through;
+                color: rgba(6,10,36,0.56);
+            }
+
             nav .menu input {
                 display: none;
             }
