--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -30,9 +30,14 @@ Se debe aber la carpeta independiente de acamica para que todas las direcciones 
 
 */
 header {
+  z-index: 30;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: _header;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
   width: 100%;
   height: 44px;
   display: -webkit-box;
@@ -102,10 +107,8 @@ header nav .menu ul li a:active {
 
 header nav .menu input[type="checkbox"]:checked ~ ul {
   height: 240px;
-  transition: height 0.5s ease-in-out;
-  -moz-transition: height 0.5s ease-in-out;
-  -o-transition: height 0.5s ease-in-out;
   -webkit-transition: height 0.5s ease-in-out;
+  transition: height 0.5s ease-in-out;
 }
 
 header nav .menu {
@@ -131,37 +134,266 @@ header nav .menu span {
   z-index: 1;
   -webkit-transform-origin: 3px 0px;
           transform-origin: 3px 0px;
-  -webkit-transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
-  transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease, opacity 0.55s ease;
-  transition: transform 0.5s ease, opacity 0.55s ease, -webkit-transform 0.5s ease;
+  -webkit-transition: opacity 1.5s ease;
+  transition: opacity 1.5s ease;
 }
 
-header nav .menu span:first-child {
+header nav div.menu span {
   -webkit-transform-origin: 0% 0%;
           transform-origin: 0% 0%;
+  -webkit-animation: check_menu_out_first_child 0.75s ease-in-out;
+          animation: check_menu_out_first_child 0.75s ease-in-out;
 }
 
-header nav .menu span:nth-last-child(2) {
+header nav div.menu span:nth-last-child(2) {
   -webkit-transform-origin: 0% 100%;
           transform-origin: 0% 100%;
+  -webkit-animation: check_menu_out_last_child_2 0.4s ease-in-out;
+          animation: check_menu_out_last_child_2 0.4s ease-in-out;
+}
+
+header nav div.menu span:nth-last-child(3) {
+  -webkit-transform-origin: 0% 50%;
+          transform-origin: 0% 50%;
+  -webkit-animation: check_menu_out_last_child_3 0.75s ease-in-out;
+          animation: check_menu_out_last_child_3 0.75s ease-in-out;
 }
 
 header nav .menu input:checked ~ span {
+  -webkit-animation: check_menu_in 0.5s ease-in-out;
+          animation: check_menu_in 0.5s ease-in-out;
   opacity: 1;
   -webkit-transform: rotate(45deg) translate(2px, 1px);
           transform: rotate(45deg) translate(2px, 1px);
 }
 
 header nav .menu input:checked ~ span:nth-last-child(3) {
+  -webkit-animation: check_menu_in 0.5s ease-in-out;
+          animation: check_menu_in 0.5s ease-in-out;
   opacity: 0;
   -webkit-transform: rotate(0deg) scale(0.2, 0.2);
           transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 header nav .menu input:checked ~ span:nth-last-child(2) {
+  -webkit-animation: check_menu_in 0.5s ease-in-out;
+          animation: check_menu_in 0.5s ease-in-out;
   -webkit-transform: rotate(-45deg) translate(1px, 0px);
           transform: rotate(-45deg) translate(1px, 0px);
+}
+
+@-webkit-keyframes check_menu_out_first_child {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(45deg) scale(1, 1);
+            transform: rotate(45deg) scale(1, 1);
+  }
+  40% {
+    opacity: 0.8;
+    -webkit-transform: rotate(30deg) scale(0.8, 0.8);
+            transform: rotate(30deg) scale(0.8, 0.8);
+  }
+  60% {
+    opacity: 0.5;
+    -webkit-transform: rotate(20deg) scale(0.5, 0.5);
+            transform: rotate(20deg) scale(0.5, 0.5);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(10deg) scale(0.5, 0.5);
+            transform: rotate(10deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
+}
+
+@keyframes check_menu_out_first_child {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(45deg) scale(1, 1);
+            transform: rotate(45deg) scale(1, 1);
+  }
+  40% {
+    opacity: 0.8;
+    -webkit-transform: rotate(30deg) scale(0.8, 0.8);
+            transform: rotate(30deg) scale(0.8, 0.8);
+  }
+  60% {
+    opacity: 0.5;
+    -webkit-transform: rotate(20deg) scale(0.5, 0.5);
+            transform: rotate(20deg) scale(0.5, 0.5);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(10deg) scale(0.5, 0.5);
+            transform: rotate(10deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
+}
+
+@-webkit-keyframes check_menu_out_last_child_2 {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(-45deg) scale(1, 1);
+            transform: rotate(-45deg) scale(1, 1);
+  }
+  40% {
+    opacity: 0.8;
+    -webkit-transform: rotate(-30deg) scale(0.8, 0.8);
+            transform: rotate(-30deg) scale(0.8, 0.8);
+  }
+  60% {
+    opacity: 0.5;
+    -webkit-transform: rotate(-20deg) scale(0.5, 0.5);
+            transform: rotate(-20deg) scale(0.5, 0.5);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(-10deg) scale(0.5, 0.5);
+            transform: rotate(-10deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
+}
+
+@keyframes check_menu_out_last_child_2 {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(-45deg) scale(1, 1);
+            transform: rotate(-45deg) scale(1, 1);
+  }
+  40% {
+    opacity: 0.8;
+    -webkit-transform: rotate(-30deg) scale(0.8, 0.8);
+            transform: rotate(-30deg) scale(0.8, 0.8);
+  }
+  60% {
+    opacity: 0.5;
+    -webkit-transform: rotate(-20deg) scale(0.5, 0.5);
+            transform: rotate(-20deg) scale(0.5, 0.5);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(-10deg) scale(0.5, 0.5);
+            transform: rotate(-10deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
+}
+
+@-webkit-keyframes check_menu_out_last_child_3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotate(0) scale(0.2, 0.2);
+            transform: rotate(0) scale(0.2, 0.2);
+  }
+  40% {
+    opacity: 0.4;
+    -webkit-transform: rotate(0) scale(0.4, 0.4);
+            transform: rotate(0) scale(0.4, 0.4);
+  }
+  60% {
+    opacity: 0.6;
+    -webkit-transform: rotate(0) scale(0.6, 0.6);
+            transform: rotate(0) scale(0.6, 0.6);
+  }
+  80% {
+    opacity: 0.8;
+    -webkit-transform: rotate(0) scale(0.8, 0.8);
+            transform: rotate(0) scale(0.8, 0.8);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotate(0) scale(1, 1);
+            transform: rotate(0) scale(1, 1);
+  }
+}
+
+@keyframes check_menu_out_last_child_3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: rotate(0) scale(0.2, 0.2);
+            transform: rotate(0) scale(0.2, 0.2);
+  }
+  40% {
+    opacity: 0.4;
+    -webkit-transform: rotate(0) scale(0.4, 0.4);
+            transform: rotate(0) scale(0.4, 0.4);
+  }
+  60% {
+    opacity: 0.6;
+    -webkit-transform: rotate(0) scale(0.6, 0.6);
+            transform: rotate(0) scale(0.6, 0.6);
+  }
+  80% {
+    opacity: 0.8;
+    -webkit-transform: rotate(0) scale(0.8, 0.8);
+            transform: rotate(0) scale(0.8, 0.8);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotate(0) scale(1, 1);
+            transform: rotate(0) scale(1, 1);
+  }
+}
+
+@-webkit-keyframes check_menu_in {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg) scale(1, 1);
+            transform: rotate(0deg) scale(1, 1);
+  }
+  50% {
+    opacity: 0.8;
+    -webkit-transform: rotate(0deg) scale(0.8, 0.8);
+            transform: rotate(0deg) scale(0.8, 0.8);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(0deg) scale(0.5, 0.5);
+            transform: rotate(0deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
+}
+
+@keyframes check_menu_in {
+  0% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg) scale(1, 1);
+            transform: rotate(0deg) scale(1, 1);
+  }
+  50% {
+    opacity: 0.8;
+    -webkit-transform: rotate(0deg) scale(0.8, 0.8);
+            transform: rotate(0deg) scale(0.8, 0.8);
+  }
+  80% {
+    opacity: 0.5;
+    -webkit-transform: rotate(0deg) scale(0.5, 0.5);
+            transform: rotate(0deg) scale(0.5, 0.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2);
+  }
 }
 
 main {
@@ -599,6 +831,11 @@ footer ul {
 
 @media screen and (min-width: 1000px) {
   header {
+    z-index: 30;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
     height: 80px;
     /*Se elemininan aspectos visualles del menu amburgesa*/
   }
@@ -607,16 +844,32 @@ footer ul {
     height: 36px;
     margin: 22px 0 22px 100px;
   }
+  header nav .menu ul {
+    position: relative;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    background: unset;
+    height: unset;
+  }
+  header nav .menu ul li {
+    padding: 5px 10px;
+    display: inline-block;
+  }
   header nav .menu ul li:hover {
     background: unset;
-    border-bottom: 2px solid black;
   }
   header nav .menu ul li a {
     padding: unset;
     line-height: unset;
+    color: #060A24;
   }
   header nav .menu ul li a:hover {
-    color: unset;
+    color: #00F3BB;
+  }
+  header nav .menu ul li a:active {
+    text-decoration: line-through;
+    color: rgba(6, 10, 36, 0.56);
   }
   header nav .menu input {
     display: none;
