Se organizan  la seccion title solo queda faltanto anexar texto con affer y before y generar posicionamiento en vista 600px a 100px

--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -15,7 +15,7 @@
             }
             /*Se elemininan aspectos visualles del menu amburgesa*/
             nav .menu ul {
-                position: relative;
+                position: absolute;
                 top: 0;
                 right: 0;
                 overflow: hidden;
@@ -24,16 +24,23 @@
             }
             nav .menu  ul li {
                 padding: 5px 10px;
+                margin: 26px 0 26px 0px;
                 display: inline-block;
-            } 
+            }
+            nav .menu  ul li:last-child {
+                margin-right: 100px;
+               
+            }  
             nav .menu  ul li:hover {
                 background: unset;
                 
             } 
             nav .menu ul li a {
                 padding: unset;
-                line-height: unset;
+                font-size: 16px;
                 color: #060A24;
+                letter-spacing: 0;
+                line-height: 28px;
             }
             nav .menu  ul li a:hover {
                 color: #00F3BB;
@@ -58,14 +65,36 @@
                 justify-content:flex-end;
                 width: 68px;
                 height: 26px;
-                padding-right: 20px;
                 list-style: none;
                 text-transform: capitalize;
-                margin: 26px 100px 26px 0px;
-
+                
             }
         }
         main{
+            /* ***********************************************Seccion title ************************************************************/
+            section.title h1{
+                font-size: 64px;
+                margin-top: 120px;
+                margin-left: 200px;
+            }
+            section.title h1 span{
+                padding: unset;
+            }
+
+            section.title p{
+                margin-left: 200px;
+                margin-bottom: 0;
+                font-size: 16px;
+                line-height: 24px;
+            }
+            section.title div.btn{
+                width: 226px;
+                height: 56px;
+                margin-top: 56px;
+                margin-left: 200px;
+            }
+
+
             /* *********************************************        Seccion Episodios   ****************************************************** */
             .episodios .movile{
                 display: none;
