--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -1,4 +1,64 @@
+    @media screen and (min-width:321px) {
 
+        section.title .punto_color{
+                color: #0000EC;
+        }
+        section.title p span::after{
+                content: " y la tecnología.";   
+            }
+        section.title p span::before{
+                 display: none;
+             }
+        section.title h1 span{
+                padding: unset;
+        }
+        section.entrevistas article div img{
+                width: 50%;
+                padding-bottom: 10px;
+            }
+    }
+
+    @media screen and (min-width:640px) {
+
+        main{
+            .title h1{
+                margin:29px 0 0 50px;
+            }
+            .title p.style_parrafo{
+                margin-left: 50px;
+                max-width: 640px;
+            }
+            .entrevistas  article{
+                display: grid;
+                grid-template-areas:"h2 h2 "
+                                    "div div"
+                                    "div div"
+                                    "div div";
+                grid-template-columns:auto;
+                grid-template-rows: auto;
+            }
+            .entrevistas article h2{
+                grid-area: h2;
+            }
+            section.entrevistas article div{
+                width:100% ;
+                
+            }
+            section.entrevistas article div img{
+                width: 90%;
+                padding-bottom: 10px;
+            }
+
+            section.topicos article.novedades div.oblicuo div{
+
+                margin: 64px 16px 64px 16px;
+            } 
+
+        }
+
+        
+        
+    }
     @media screen  and (min-width: 1000px ) {
         
         header{
@@ -77,22 +137,26 @@
                 margin-top: 120px;
                 margin-left: 200px;
             }
-            section.title h1 span{
-                padding: unset;
-            }
-
-            section.title p{
+            
+            
+            section.title p.style_parrafo{
+                height: 48px;
                 margin-left: 200px;
                 margin-bottom: 0;
                 font-size: 16px;
                 line-height: 24px;
+                
             }
+           
+
+            
             section.title div.btn{
                 width: 226px;
                 height: 56px;
                 margin-top: 56px;
                 margin-left: 200px;
             }
+             
 
 
             /* *********************************************        Seccion Episodios   ****************************************************** */
@@ -194,6 +258,7 @@
                 color: #060A24;
                 letter-spacing: 0;
                 line-height: 24px;
+                max-width: 640px;
             }
 
             /* *********************************************        Seccion entrevistas     ******************************************** */
