--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -478,7 +478,17 @@ main .title h1 span {
   padding-right: 42px;
 }
 
-main .title p {
+main .title p span {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+main .title p span::before {
+  content: ".";
+}
+
+main .title p.style_parrafo {
   font-weight: 400;
   width: 90%;
   height: 66px;
@@ -487,6 +497,7 @@ main .title p {
   color: #060A24;
   letter-spacing: 0;
   line-height: 22px;
+  max-width: 640px;
 }
 
 main .oblicuo {
@@ -646,6 +657,7 @@ main .nosotros article p {
   color: #060A24;
   letter-spacing: 0;
   line-height: 22px;
+  max-width: 638px;
 }
 
 main .entrevistas {
@@ -828,6 +840,60 @@ footer ul {
       justify-content: space-around;
 }
 
+@media screen and (min-width: 321px) {
+  section.title .punto_color {
+    color: #0000EC;
+  }
+  section.title p span::after {
+    content: " y la tecnología.";
+  }
+  section.title p span::before {
+    display: none;
+  }
+  section.title h1 span {
+    padding: unset;
+  }
+  section.entrevistas article div img {
+    width: 50%;
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  main .title h1 {
+    margin: 29px 0 0 50px;
+  }
+  main .title p.style_parrafo {
+    margin-left: 50px;
+    max-width: 640px;
+  }
+  main .entrevistas article {
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "h2 h2 " "div div" "div div" "div div";
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+  }
+  main .entrevistas article h2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: h2;
+  }
+  main section.entrevistas article div {
+    width: 100%;
+  }
+  main section.entrevistas article div img {
+    width: 90%;
+    padding-bottom: 10px;
+  }
+  main section.topicos article.novedades div.oblicuo div {
+    margin: 64px 16px 64px 16px;
+  }
+}
+
 @media screen and (min-width: 1000px) {
   header {
     z-index: 30;
@@ -909,10 +975,8 @@ footer ul {
     margin-top: 120px;
     margin-left: 200px;
   }
-  main section.title h1 span {
-    padding: unset;
-  }
-  main section.title p {
+  main section.title p.style_parrafo {
+    height: 48px;
     margin-left: 200px;
     margin-bottom: 0;
     font-size: 16px;
@@ -1019,6 +1083,7 @@ footer ul {
     color: #060A24;
     letter-spacing: 0;
     line-height: 24px;
+    max-width: 640px;
   }
   main .entrevistas {
     width: 100%;
