--- a/sprin1/style/_footer.scss
+++ b/sprin1/style/_footer.scss
@@ -20,6 +20,10 @@ footer{
         display: flex;
         flex-flow: row nowrap;
         justify-content:space-around;
+        
+    }
+    ul a{
+        color: black;
     }
 
 }
