--- a/sprin1/style/_main.scss
+++ b/sprin1/style/_main.scss
@@ -10,7 +10,7 @@ main{
     grid-template-rows: auto;
     
     font-family: IBMPlexSans,sans-serif;
-    .btn{
+    .btn a{
         
         display: flex;
         flex-flow: column wrap;
@@ -27,6 +27,7 @@ main{
         color: #060A24;
         letter-spacing: 0;
         line-height: 22px;
+        text-decoration: none;
         &:hover{
             transition-duration:1s;
             background-image: linear-gradient(225deg, #0000FE 0, #00F0B8 100%);
@@ -299,7 +300,7 @@ main{
             width: 100%;
             height: 341px;
             
-            div{
+            div {
                 transform-origin: top right;
                 h2{
                     margin: 64px 16px 36px 16px ;
@@ -311,11 +312,11 @@ main{
                     line-height: 42px;
                 
                 }
-                .btn{
+                .btn a{
                     
                     transform: skewY(6deg);
                     margin-bottom: 67px;
-                    
+                    text-decoration: none;
                 }
             }
 
