--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -13,9 +13,9 @@
                 padding: unset;
         }
         section.entrevistas article div img{
-                width: 50%;
+                width: 80%;
                 padding-bottom: 10px;
-            }
+        }
     }
 
     @media screen and (min-width:640px) {
@@ -49,7 +49,7 @@
                 padding-bottom: 10px;
             }
 
-            section.topicos article.novedades div.oblicuo div{
+            section.topicos article.novedades div.oblicuo div a{
 
                 margin: 64px 16px 64px 16px;
             } 
@@ -406,11 +406,11 @@
         
             
             section ul li{
-                margin: 36px 36px 31px 0;
+                margin: 0 36px 31px 0;
                 
             }
             section ul li:last-child{
-                margin: 36px 100px 31px 0;
+                margin: 0 100px 31px 0;
                 
             }
             section ul li a i{
@@ -441,42 +441,3 @@
         }
     }
 
-/*
-header{
-     @media screen and (min-width:500px) {
-
-
-        /* Amburgueza *//*
-        nav .menu ul {
-            position: relative;
-            top: 0;
-            right: 0;
-            overflow: hidden;
-            background: unset;
-            height: unset;
-        }
-        nav .menu  ul li {
-            padding: 5px 10px;
-        } 
-        nav .menu  ul li:hover {
-            background: unset;
-            border-bottom: 2px solid black;
-        } 
-        nav .menu ul li a {
-            padding: unset;
-            line-height: unset;
-        }
-        nav .menu  ul li a:hover {
-            color: unset;
-        } 
-        nav .menu input {
-            display: none;
-        }
-        nav .menu span {
-            display: none;
-        }
-    }
-}
-
-*/
-    
