--- a/style/_header.scss
+++ b/style/_header.scss
@@ -59,9 +59,11 @@ header{
     height: 240px;
         transition: height 0.5s ease-in-out;
     }
+    /*
     nav .menu {
         padding-top: 3px;
     }
+    */
     /*checkbox transparente y en primer plano*/
     nav .menu input {
         display: block;
