--- a/style/_main.scss
+++ b/style/_main.scss
@@ -59,7 +59,7 @@ main{
             line-height: 42px;
             margin:29px 0 0 16px;
         
-            span{
+            span:first-child{
                 text-decoration: line-through;
                 padding-right:42px;
             }
@@ -169,15 +169,16 @@ main{
         grid-area: nosotros;
         display: flex;
         flex-flow: row nowrap;
+        
         position: relative;
         top: -95.5px;
         article{
-            position: relative;
-            top:0;
-            left: 0;
             width: 100%;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
             div.phone_over{
-                width: 320px;
+                width: 100%;
                 overflow: hidden;
                 align-items: center;
                 img{
@@ -186,7 +187,7 @@ main{
                     left: -20px;
                     width: 360px;
                     height: 519px;
-                    
+
                 }
                 padding-bottom: 27px;
             }
@@ -233,7 +234,7 @@ main{
             width: 100%;
             height:243px;
             img{
-                width: 320px;
+                width: 100%;
                 height: 243px;
             
             }
